improve UI, improve import and bug fixes.